--- a/pages/second.scss
+++ b/pages/second.scss
@@ -1,5 +1,16 @@
-.sdiv{
-    background-color: black;
-    width: 100px;
-    height: 100px;
+.second{
+    width: 80%;
+    margin: 0px auto;
+}
+.secondtop{
+    display: flex;
+    gap: 20px;
+    margin-top: 10px;
+}
+.secondmain{
+    display: flex;
+    gap: 10px;
+}
+.a4{
+    text-decoration: none;
 }
