--- a/app.scss
+++ b/app.scss
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-body{
+.bg{
+    background-image: url(./images/background1.jpg);
     padding-bottom: 50px;
 }
